                                      MPlayer Core CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
  - 08-03-2005 changed: reworked FF/RW, no skiping when returning to normal playback anymore. AV sync might be abit of, but should correct itself in a sec or two
  - 05-03-2005 changed: disbled ff/rw in files/streams that can't be seeked as this causes audio/video desync
  - 03-03-2005 fixed: using autosync cuaeses propblems when resuming from pause. (needs xbmc to call mplayer_ToFFRW(1))
  - 03-03-2005 fixed: using autosync=30(or any value !=0) would cause invalid behaviour on short movies
  - 03-03-2005 changed: use same fix for real as mplayerhq, needs somewhat less mem
  - 27-02-2005 fixed: flac playback with large headers (new attempt at fixing flac completely.)
  - 27-02-2005 added: [ 1122901 ] / [ 1122894 ] patch file for bug 1122894 (fix for RV10 crash)
  - 24-02-2005 fixed: Longstanding vobsubs bug.  Some long-ish (2 lines normally) subs weren't displayed.
  - 21-02-2005 fixed: read_font_desc() returned non-NULL when it should have been NULL.  Caused crash on exit of mplayer (particularly flac)
  - 21-02-2005 added: mplayer bugfix/patch for flac.c: http://www1.mplayerhq.hu/cgi-bin/cvsweb.cgi/ffmpeg/libavcodec/flac.c?cvsroot=FFMpeg&sortby=date
  - 10-02-2005 improved: ff/rw should now work even better. needs testing. 
  - 07-02-2005 fixed: seeking in mpg's type video's sometimes reverted to beginning.
  - 01-02-2005 fixed: flac playback works sometimes but most times not
  - 01-02-2005 added: mplayer support for new system\players directory structure, enable Alternate mplayer core in settings to use it.
                      Requires new compiled mplayer.dll, old dll's still needs to be in old mplayer dir.